[package]
name = "cs220"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
etrace = "1.1.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
pest = "2.7.2"
pest_derive = "2.7.2"
rayon = "1.7.0"
thiserror = "1.0.47"
ntest = "0.9.0"
approx = "0.5.1"
num-traits = "0.2.16"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
