[package]
name = "cs220"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cs220"
path = "src/lib.rs"

[[bin]]
name = "calc"
path = "src/bin/calc.rs"
required-features = ["build-calc"]

[[bin]]
name = "par_iter"
path = "src/bin/par_iter.rs"

[features]
build-calc = ["clap"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"], optional = true }
etrace = "1.1.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
pest = "2.7.11"
pest_derive = "2.7.11"
rayon = "1.10.0"
ntest = "0.9.3"
approx = "0.5.1"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
